[package]
name = "srun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.145", features = ["derive"]}
thirtyfour = {version="0.31.0", features = ["native-tls"]}
tokio = { version = "1.21.2", features = ["full"] }
directories = "4.0.1"
serde_json = "1.0.85"